Sun,  6 May 2007 15:56:37 +0200 <thp@perli.net>
        * data/gpodder.desktop: Added German and Russian translations to the 
          desktop entry file

Sun,  6 May 2007 14:41:37 +0200 <thp@perli.net>
        * src/gpodder/libopmlwriter.py: Write UTF-8 encoded files by default
        * src/gpodder/liblocdbwriter.py: Write UTF-8 encoded files by default
        * data/po/ru.po: Added Russian translation by Vladimir Zemlykov
          (zemlyakov gmail.com)
        * setup.py: Added "ru" to list of languages to install
        * bin/gpodder: Pushed vers + rel.date

Sat,  5 May 2007 20:47:33 +0200 <thp@perli.net>
        * TODO: Updated TODO list (delete all episodes function)

Sat,  5 May 2007 10:06:58 +0200 <thp@perli.net>
        * data/gpodder.glade: Brand new, shiny preferences dialog with
          nice structuring, bold headings and icons
        * src/gpodder/gpodder.py: Removed "symlink on desktop" code
        * TODO: Updated TODO list (translations needed, prefs done)
        * bin/gpodder: Pushed version + release date

Thu,  3 May 2007 22:25:47 +0200 <thp@perli.net>
        * TODO: Updated TODO list to reflect release goals for the 0.9.2
          release

Tue,  1 May 2007 21:58:58 +0200 <thp@perli.net>
        * src/gpodder/libwget.py: Implement support for download queue using
          a semaphore in the downloadStatusManager class
        * src/gpodder/libgpodder.py: Configuration options "max_downloads"
          and "max_downloads_enabled" for the download queue
        * src/gpodder/gpodder.py: Add support for configuration of the
          download queue code (gPodderProperties dialog)
        * data/gpodder.glade: Add checkbox + spinbutton for download queue
        * TODO: Updated TODO list (download queue done)
        * bin/gpodder: Pushed version + release date

Sat, 28 Apr 2007 11:10:18 +0200 <thp@perli.net>
        * TODO: Updated TODO list

Sat, 21 Apr 2007 21:23:08 +0200 <thp@perli.net>