@@ -1,9 +1,6 @@
 
  gPodder 0.9.2 release goals:
  
- * Improvements for download queue:
-   -> get rid of mandatory restarting for semaphore (x simultaneous downloads)
- 
  * Update translations before release (new Properties dialog adds new strings)
 
  === Todo List for gPodder ===
