@@ -1,3 +1,11 @@
+Sun,  6 May 2007 17:24:49 +0200 <thp@perli.net>
+        * src/gpodder/libwget.py: Add support for dynamic download queue 
+          resizing; improve support for enabling/disabling download queue 
+          while downloads are in progress
+        * data/gpodder.glade: Remove info text "download queue changes need 
+          a restart of gpodder", because it's not needed anymore - yay! :)
+        * TODO: Dynamic Download Queue marked as done :)
+
 Sun,  6 May 2007 15:56:37 +0200 <thp@perli.net>
         * data/gpodder.desktop: Added German and Russian translations to the 
           desktop entry file
